--- a/src/Game.css
+++ b/src/Game.css
@@ -1,5 +1,8 @@
-.Game {
+.Game-header {
+  padding: 20px;
   text-align: center;
+  background-color: #222;
+  color: white;
 }
 
 .Game-logo {
@@ -9,15 +12,22 @@
   animation-timing-function: linear;
 }
 
-.Game-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Game-header h2 {
+  margin: 0;
 }
 
-.Game-intro {
-  font-size: large;
+.Game-status {
+  margin: 20px auto 0;
+  max-width: 80ch;
+}
+
+.Game-status .key {
+  font-weight: bold;
+}
+
+.Game-components {
+  margin: 20px auto;
+  max-width: 80ch;
 }
 
 @keyframes Game-logo-spin {
